<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_inicio" />

    <item
        android:id="@+id/navigation_producto"
        android:icon="@drawable/ic_product"
        android:title="@string/cat_logo" />

    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/ic_users"
        android:title="@string/menu_usuario" />

    <item
        android:id="@+id/navigation_venta"
        android:icon="@drawable/ic_shopping_checkout"
        android:title="@string/menu_venta" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_perfil" />

</menu>


<!--<menu xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--tools:showIn="navigation_view">-->

<!--<group android:checkableBehavior="single">-->
<!--    <item-->
<!--        android:id="@+id/nav_home"-->
<!--        android:icon="@drawable/ic_menu_camera"-->
<!--        android:title="@string/menu_home" />-->
<!--    <item-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:icon="@drawable/ic_menu_gallery"-->
<!--        android:title="@string/menu_gallery" />-->

<!--    <item-->
<!--        android:id="@+id/nav_article"-->
<!--        android:icon="@drawable/ic_article"-->
<!--        android:title="@string/menu_article" />-->

<!--    <item-->
<!--        android:id="@+id/nav_account"-->
<!--        android:icon="@drawable/ic_account"-->
<!--        android:title="@string/menu_profile" />-->

<!--</group>-->
<!--</menu>-->