<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp"
    tools:context="app.empresa.ferreland.ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:cardCornerRadius="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/logo_ferreland" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center_horizontal"
        android:text="@string/title_session"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center_horizontal"
        android:text="@string/sub_title_session"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/hint_correo"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/hint_contraseña"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvOlvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/forgout_password"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/_11sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/btn_title_session"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvOlvidaste">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/indicatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="9sp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:indicatorSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnIniciar"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciar"
        app:layout_constraintStart_toStartOf="@+id/btnIniciar"
        app:layout_constraintTop_toTopOf="@+id/btnIniciar" />

    <TextView
        android:id="@+id/textO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="o"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciar"
        app:layout_constraintStart_toStartOf="@+id/btnIniciar"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textO">

        <ImageView
            android:id="@+id/ivHuella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_fingerprint_24"
            android:minWidth="@dimen/_80sdp"
            android:minHeight="@dimen/_80sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TextView
            android:id="@+id/textSinCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="No tienes cuenta.?  "
            android:textColor="@color/gray600"
            android:textSize="@dimen/_12sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/textSinCuenta"
            android:fontFamily="@font/poppinssemibold"
            android:text="Registrarse"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textSinCuenta"
            app:layout_constraintStart_toEndOf="@+id/textSinCuenta"
            app:layout_constraintTop_toTopOf="@+id/textSinCuenta" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!--<com.google.android.material.button.MaterialButton-->
    <!--android:id="@+id/btnProductos"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="65sp"-->
    <!--android:layout_marginTop="@dimen/_2sdp"-->
    <!--android:gravity="right"-->
    <!--android:text="@string/btn_title_productos"-->
    <!--android:textAllCaps="false"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="@dimen/_12sdp"-->
    <!--android:visibility="gone"-->
    <!--app:cornerRadius="8dp">-->

    <!--</com.google.android.material.button.MaterialButton>-->


    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/btnRegistrarse"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="65sp"-->
    <!--        android:layout_marginTop="@dimen/_2sdp"-->
    <!--        android:text="@string/btn_title_registrarse"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="@dimen/_12sdp"-->
    <!--        app:cornerRadius="8dp"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/btnIniciar"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/btnIniciar"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnIniciar">-->

    <!--    </com.google.android.material.button.MaterialButton>-->
